Changed Prompt from one string to individual word components for styling

--- a/src/styles/components/_text.scss
+++ b/src/styles/components/_text.scss
@@ -5,3 +5,19 @@
 .text__coloritemheader {
     color: $purple;
 }
+
+.textDefault {
+    color: $off-white;
+}
+
+.textDefault--correct {
+    color: $green;
+}
+
+.textDefault--incorrect {
+    color: $red;
+}
+
+.textDefault--current {
+    color: $orange;
+}
