--- a/src/styles/components/_modal.scss
+++ b/src/styles/components/_modal.scss
@@ -33,6 +33,6 @@
 .modal__body {
     font-size: 2rem;
     font-weight: 300;
-    margin: 0 0 $l-size 0;
+    margin: 0 0 $s-size 0;
     word-break: break-all;
 }
