--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -7,3 +7,6 @@
 @import './components/modal';
 @import './components/text';
 @import './components/typingtest';
+@import './components/box-layout';
+@import './components/section';
+@import './components/spacer';
