--- a/src/styles/components/_page-header.scss
+++ b/src/styles/components/_page-header.scss
@@ -4,4 +4,15 @@
     font-size: 50px; 
 }
 
+.page-header__big {
+    font-size: 68px;
+    color: $orange;  
+    animation: fadein 2s;
+    text-align: center;
+    @media (min-width: $desktop-breakpoint) {
+        font-size: 120px;
+        text-align: left;
+    }
+}
+
 
