added header and logout button

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -10,3 +10,4 @@
 @import './components/box-layout';
 @import './components/section';
 @import './components/spacer';
+@import './components/header';
