--- a/src/styles/components/_spacer.scss
+++ b/src/styles/components/_spacer.scss
@@ -12,3 +12,13 @@
 .spacer--topPage {
     margin-top: 0;
 }
+.spacer__bottom {
+    padding: 17.5%;
+    margin-bottom: 20%;
+    padding-left: 0%;
+    padding-right: 0%;
+    @media (min-width: $desktop-breakpoint) {
+        padding-top: 2.5%;
+        padding-bottom: 2.5%;
+    }
+}
