--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -11,7 +11,7 @@
     align-items: center;
     display: flex;
     justify-content: space-between;
-    padding: $s-size 0;
+    padding: 0;
 }
 
 .header__title {
